--- a/reports.html
+++ b/reports.html
@@ -1060,6 +1060,8 @@ function getTrend(currentAvg, previousAvg) {
   return "➖ Stable";
 }
 
+
+
 window.downloadPDF = async function () {
   if (!reportDiv.innerHTML.trim()) {
     alert("No report to download");
@@ -1069,30 +1071,27 @@ window.downloadPDF = async function () {
   const term = termSelect.options[termSelect.selectedIndex]?.text || "Term";
   const filename = `Summary_Report_${term}_${SYSTEM_YEAR}.pdf`;
 
+  // Clone the report for clean PDF rendering
   const clone = reportDiv.cloneNode(true);
 
-  // ===============================
-  // FORCE CLEAN A4 LAYOUT
-  // ===============================
-  clone.style.width = "180mm"; // slightly smaller to respect margins
+  // ===== FORCE CLEAN A4 LAYOUT =====
+  clone.style.width = "190mm";
   clone.style.margin = "0 auto";
   clone.style.padding = "0";
   clone.style.boxSizing = "border-box";
 
-  // ===============================
-  // REMOVE DETAILED CONTENT
-  // ===============================
+  // ===== REMOVE DETAILED CONTENT =====
   clone.querySelectorAll(".subject-block, .trend-box").forEach(el => el.remove());
 
   const cards = clone.querySelectorAll(".learner-card");
 
   cards.forEach(card => {
+    // Reset card layout
     card.style.margin = "0";
     card.style.padding = "0";
     card.style.boxSizing = "border-box";
-    card.style.pageBreakAfter = "always"; // force page break per learner
 
-    // ===== HEADER =====
+    // Format header
     const header = card.querySelector(".learner-header");
     if (header) {
       header.style.marginTop = "0";
@@ -1101,75 +1100,27 @@ window.downloadPDF = async function () {
       header.style.fontWeight = "700";
     }
 
-    const studentName =
-      card.querySelector("h4")?.innerText
-        .replace("👤", "")
-        .replace(/\(.*?\)/, "")
-        .trim();
+    // Get student name safely
+    const studentName = card.querySelector("h4")?.innerText
+      .replace("👤", "")
+      .replace(/\(.*?\)/, "")
+      .trim();
 
     const subjectData = avgMap?.[studentName];
-    if (!subjectData) return;
+    if (!subjectData) return; // skip if no data
 
-    // ===============================
-    // CALCULATE OVERALL AVERAGE
-    // ===============================
-    const subjectScores = Object.values(subjectData).map(d => Number(d.average_score) || 0);
+    // ===== CALCULATE OVERALL AVERAGE =====
+    const subjectScores = Object.values(subjectData).map(d => Number(d.average_score));
     const overallAvg = subjectScores.length
       ? subjectScores.reduce((a, b) => a + b, 0) / subjectScores.length
       : 0;
 
-    // ===============================
-    // SUMMARY TABLE
-    // ===============================
-    const table = document.createElement("table");
-    table.style.width = "100%";
-    table.style.borderCollapse = "collapse";
-    table.style.marginTop = "12px";
-    table.style.fontSize = "12px";
-    table.style.tableLayout = "fixed";
-
-    table.innerHTML = `
-      <thead>
-        <tr>
-          <th style="border:1px solid #000;padding:6px;width:30%;">Learning Area</th>
-          <th style="border:1px solid #000;padding:6px;width:15%;">Score</th>
-          <th style="border:1px solid #000;padding:6px;width:25%;">Performance Level</th>
-          <th style="border:1px solid #000;padding:6px;width:30%;">Teacher Comment</th>
-        </tr>
-      </thead>
-      <tbody>
-        ${Object.entries(subjectData).map(([subject, d]) => {
-          const avg = Number(d.average_score) || 0;
-          return `
-            <tr>
-              <td style="border:1px solid #000;padding:6px;">${subject}</td>
-              <td style="border:1px solid #000;padding:6px;text-align:center;">
-                ${avg.toFixed(2)}
-              </td>
-              <td style="border:1px solid #000;padding:6px;">
-                ${d.achievement_level}
-              </td>
-              <td style="border:1px solid #000;padding:6px;">
-                ${commentFromScore(avg)}
-              </td>
-            </tr>
-          `;
-        }).join("")}
-      </tbody>
-    `;
-
-    // ===============================
-    // EXTRACT STRENGTHS / NEEDS / TREND
-    // ===============================
+    // ===== SUMMARY BLOCK =====
     const trendText = card.querySelector(".split-block p")?.innerText || "🆕 New Entry";
-
-    const strengthsEl = Array.from(card.querySelectorAll(".split-block p strong"))
-      .find(el => el.textContent.includes("💪 Strengths"));
-    const strengthsText = strengthsEl ? strengthsEl.parentNode.innerText.replace("💪 Strengths:", "").trim() : "";
-
-    const needsEl = Array.from(card.querySelectorAll(".split-block p strong"))
-      .find(el => el.textContent.includes("🎯 Areas for Improvement"));
-    const needsText = needsEl ? needsEl.parentNode.innerText.replace("🎯 Areas for Improvement:", "").trim() : "";
+    const strengthsText = card.querySelector(".split-block p strong:contains('💪 Strengths')')?.parentNode?.innerText
+      .replace("💪 Strengths:", "").trim() || "";
+    const needsText = card.querySelector(".split-block p strong:contains('🎯 Areas for Improvement')')?.parentNode?.innerText
+      .replace("🎯 Areas for Improvement:", "").trim() || "";
 
     const summaryBlock = document.createElement("div");
     summaryBlock.style.marginBottom = "12px";
@@ -1180,51 +1131,7 @@ window.downloadPDF = async function () {
       ${needsText ? `<p>🎯 Areas for Improvement: ${needsText}</p>` : ""}
     `;
 
-    card.insertBefore(summaryBlock, table);
-    card.appendChild(table);
-
-    // ===============================
-    // GENERAL PERFORMANCE BLOCK
-    // ===============================
-    const generalBlock = document.createElement("div");
-    generalBlock.style.marginTop = "14px";
-    generalBlock.style.fontSize = "12px";
-    generalBlock.innerHTML = `
-      <table style="width:100%;border-collapse:collapse;margin-top:8px;">
-        <tr>
-          <td style="border:1px solid #000;padding:6px;width:40%;">
-            <strong>Learner's General Performance Level</strong>
-          </td>
-          <td style="border:1px solid #000;padding:6px;">
-            ${overallAvg.toFixed(2)} — ${overallLevel(overallAvg)}
-          </td>
-        </tr>
-        <tr>
-          <td style="border:1px solid #000;padding:6px;">
-            <strong>Teacher's General Comment</strong>
-          </td>
-          <td style="border:1px solid #000;padding:12px;">
-            ${generalComment(overallAvg)}
-          </td>
-        </tr>
-      </table>
-
-      <div style="margin-top:18px;">
-        <div style="display:flex;justify-content:space-between;margin-top:20px;">
-          <div>Closing Date: ____________________</div>
-          <div>Opening Date: ____________________</div>
-        </div>
-        <div style="display:flex;justify-content:space-between;margin-top:30px;">
-          <div>Class Teacher Signature: ____________________</div>
-          <div>Head of Institution Signature: ____________________</div>
-        </div>
-      </div>
-    `;
-    card.appendChild(generalBlock);
-
-    // ===============================
-    // HELPER FUNCTIONS
-    // ===============================
+    // ===== HELPER FUNCTIONS =====
     function overallLevel(score) {
       if (score >= 3.5) return "Exceeding Expectations";
       if (score >= 2.5) return "Meeting Expectations";
@@ -1245,11 +1152,73 @@ window.downloadPDF = async function () {
       if (score >= 1.5) return "Fair work";
       return "Put more effort";
     }
+
+    // ===== SUMMARY TABLE =====
+    const table = document.createElement("table");
+    table.style.width = "100%";
+    table.style.borderCollapse = "collapse";
+    table.style.marginTop = "12px";
+    table.style.fontSize = "12px";
+    table.style.tableLayout = "fixed";
+
+    table.innerHTML = `
+      <thead>
+        <tr>
+          <th style="border:1px solid #000;padding:6px;width:30%;">Learning Area</th>
+          <th style="border:1px solid #000;padding:6px;width:15%;">Score</th>
+          <th style="border:1px solid #000;padding:6px;width:25%;">Performance Level</th>
+          <th style="border:1px solid #000;padding:6px;width:30%;">Teacher Comment</th>
+        </tr>
+      </thead>
+      <tbody>
+        ${Object.entries(subjectData).map(([subject, d]) => {
+          const avg = Number(d.average_score);
+          return `
+            <tr>
+              <td style="border:1px solid #000;padding:6px;">${subject}</td>
+              <td style="border:1px solid #000;padding:6px;text-align:center;">${avg.toFixed(2)}</td>
+              <td style="border:1px solid #000;padding:6px;">${d.achievement_level}</td>
+              <td style="border:1px solid #000;padding:6px;">${commentFromScore(avg)}</td>
+            </tr>
+          `;
+        }).join("")}
+      </tbody>
+    `;
+
+    // ===== GENERAL PERFORMANCE BLOCK =====
+    const generalBlock = document.createElement("div");
+    generalBlock.style.marginTop = "14px";
+    generalBlock.style.fontSize = "12px";
+    generalBlock.innerHTML = `
+      <table style="width:100%;border-collapse:collapse;margin-top:8px;">
+        <tr>
+          <td style="border:1px solid #000;padding:6px;width:40%;"><strong>Learner's General Performance Level</strong></td>
+          <td style="border:1px solid #000;padding:6px;">${overallAvg.toFixed(2)} — ${overallLevel(overallAvg)}</td>
+        </tr>
+        <tr>
+          <td style="border:1px solid #000;padding:6px;"><strong>Teacher's General Comment</strong></td>
+          <td style="border:1px solid #000;padding:12px;">${generalComment(overallAvg)}</td>
+        </tr>
+      </table>
+      <div style="margin-top:18px;">
+        <div style="display:flex;justify-content:space-between;margin-top:20px;">
+          <div>Closing Date: ____________________</div>
+          <div>Opening Date: ____________________</div>
+        </div>
+        <div style="display:flex;justify-content:space-between;margin-top:30px;">
+          <div>Class Teacher Signature: ____________________</div>
+          <div>Head of Institution Signature: ____________________</div>
+        </div>
+      </div>
+    `;
+
+    // ===== APPEND ELEMENTS SAFELY =====
+    card.appendChild(summaryBlock);
+    card.appendChild(table);
+    card.appendChild(generalBlock);
   });
 
-  // ===============================
-  // EXPORT PDF
-  // ===============================
+  // ===== EXPORT PDF =====
   html2pdf().set({
     margin: [10, 10, 10, 10],
     filename,
