--- a/teacher-term-preview.html
+++ b/teacher-term-preview.html
@@ -58,6 +58,21 @@ h5 {
   color: #555;
 }
 
+
+/* ===== HEADER TYPOGRAPHY ===== */
+.learner-header h4 {
+  font-size: 22px;
+  font-weight: 800;
+  margin: 0;
+}
+
+.learner-header small {
+  font-size: 14px;
+  font-weight: 600;
+}
+
+
+  
 .summary-box {
   background: #f3f6fa;
   border-left: 5px solid #3498db;
@@ -87,7 +102,7 @@ table {
   border-collapse: collapse;
   width: 100%;
   margin-top: 6px;
-  font-size: 0.85em;
+  font-size: 14px;
   table-layout: fixed;
   word-break: break-word;
 }
@@ -102,6 +117,12 @@ th {
   text-align: left;
 }
 
+th {
+  font-size: 14px;
+  font-weight: 700;
+}
+
+  
 tr:last-child td {
   border-bottom: none;
 }
@@ -149,6 +170,14 @@ tr:last-child td {
 .report-overview h3 {
   font-size: 1.1em;
   line-height: 1.2em;
+}
+
+
+
+.report-overview h3 {
+  font-size: 24px;
+  font-weight: 800;
+  letter-spacing: 0.3px;
 }
 
   
@@ -1032,8 +1061,6 @@ function getTrend(currentAvg, previousAvg) {
 }
 
 
-
-
 window.downloadPDF = async function () {
   if (!reportDiv.innerHTML.trim()) {
     alert("No report to download");
@@ -1043,32 +1070,25 @@ window.downloadPDF = async function () {
   const term = termSelect.options[termSelect.selectedIndex]?.text || "Term";
   const filename = `Summary_Report_${term}_${SYSTEM_YEAR}.pdf`;
 
+  // Clone the report for clean PDF rendering
   const clone = reportDiv.cloneNode(true);
 
-  /* ===============================
-     FORCE CLEAN A4 LAYOUT
-  =============================== */
+  // ===== FORCE CLEAN A4 LAYOUT =====
   clone.style.width = "190mm";
   clone.style.margin = "0 auto";
   clone.style.padding = "0";
   clone.style.boxSizing = "border-box";
 
-  /* ===============================
-     REMOVE DETAILED CONTENT
-  =============================== */
-  clone.querySelectorAll(
-    ".subject-block, .trend-box, ul, .split-block:not(.learner-header)"
-  ).forEach(el => el.remove());
+  // ===== REMOVE DETAILED CONTENT =====
+  clone.querySelectorAll(".subject-block, .trend-box").forEach(el => el.remove());
 
   const cards = clone.querySelectorAll(".learner-card");
 
   cards.forEach(card => {
-    /* ===== RESET CARD POSITION ===== */
     card.style.margin = "0";
     card.style.padding = "0";
     card.style.boxSizing = "border-box";
 
-    /* ===== STRONG HEADER ===== */
     const header = card.querySelector(".learner-header");
     if (header) {
       header.style.marginTop = "0";
@@ -1077,31 +1097,59 @@ window.downloadPDF = async function () {
       header.style.fontWeight = "700";
     }
 
-    const studentName =
-      card.querySelector("h4")?.innerText
-        .replace("👤", "")
-        .replace(/\(.*?\)/, "")
-        .trim();
+    // Get student name
+    const studentName = card.querySelector("h4")?.innerText
+      .replace("👤", "")
+      .replace(/\(.*?\)/, "")
+      .trim();
 
     const subjectData = avgMap?.[studentName];
     if (!subjectData) return;
 
-    /* ===============================
-       CALCULATE OVERALL AVERAGE
-    =============================== */
+    // ===== CALCULATE OVERALL AVERAGE =====
     const subjectScores = Object.values(subjectData).map(d => Number(d.average_score));
     const overallAvg = subjectScores.length
-      ? subjectScores.reduce((a,b)=>a+b,0) / subjectScores.length
+      ? subjectScores.reduce((a, b) => a + b, 0) / subjectScores.length
       : 0;
 
-    function overallLevel(score){
+    // ===== EXTRACT TREND, STRENGTHS & NEEDS =====
+    let trendText = card.querySelector(".split-block p")?.innerText || "";
+    trendText = trendText.replace(/^📊 Progress Trend:.*$/m, "").trim();
+
+    let strengthsText = "";
+    let needsText = "";
+    const strongElems = card.querySelectorAll(".split-block p strong");
+    strongElems.forEach(el => {
+      const text = el.innerText;
+      const parentText = el.parentNode?.innerText || "";
+      if (text.includes("💪 Strengths")) {
+        strengthsText = parentText.replace("💪 Strengths:", "").trim();
+      } else if (text.includes("🎯 Areas for Improvement")) {
+        needsText = parentText.replace("🎯 Areas for Improvement:", "").trim();
+      }
+    });
+
+    strengthsText = strengthsText.replace(/Life Skills, English, Kiswahili/g, "").trim();
+
+    // ===== SUMMARY BLOCK =====
+    const summaryBlock = document.createElement("div");
+    summaryBlock.style.marginBottom = "6px";
+    summaryBlock.style.fontSize = "11px";
+    summaryBlock.innerHTML = `
+      ${trendText ? `<p style="margin:2px 0;font-weight:bold;">${trendText}</p>` : ""}
+      ${strengthsText ? `<p style="margin:2px 0;">💪 Strengths: ${strengthsText}</p>` : ""}
+      ${needsText ? `<p style="margin:2px 0;">🎯 Areas for Improvement: ${needsText}</p>` : ""}
+    `;
+
+    // ===== HELPER FUNCTIONS =====
+    function overallLevel(score) {
       if (score >= 3.5) return "Exceeding Expectations";
       if (score >= 2.5) return "Meeting Expectations";
       if (score >= 1.5) return "Approaching Expectations";
       return "Below Expectations";
     }
 
-    function generalComment(score){
+    function generalComment(score) {
       if (score >= 3.5) return "Excellent performance. Keep it up.";
       if (score >= 2.5) return "Good progress. Continue working hard.";
       if (score >= 1.5) return "Fair work. Aim higher next term.";
@@ -1115,13 +1163,11 @@ window.downloadPDF = async function () {
       return "Put more effort";
     }
 
-    /* ===============================
-       SUMMARY TABLE
-    =============================== */
+    // ===== SUBJECT TABLE =====
     const table = document.createElement("table");
     table.style.width = "100%";
     table.style.borderCollapse = "collapse";
-    table.style.marginTop = "12px";
+    table.style.marginTop = "6px";
     table.style.fontSize = "12px";
     table.style.tableLayout = "fixed";
 
@@ -1140,32 +1186,22 @@ window.downloadPDF = async function () {
           return `
             <tr>
               <td style="border:1px solid #000;padding:6px;">${subject}</td>
-              <td style="border:1px solid #000;padding:6px;text-align:center;">
-                ${avg.toFixed(2)}
-              </td>
-              <td style="border:1px solid #000;padding:6px;">
-                ${d.achievement_level}
-              </td>
-              <td style="border:1px solid #000;padding:6px;">
-                ${commentFromScore(avg)}
-              </td>
+              <td style="border:1px solid #000;padding:6px;text-align:center;">${avg.toFixed(2)}</td>
+              <td style="border:1px solid #000;padding:6px;">${d.achievement_level}</td>
+              <td style="border:1px solid #000;padding:6px;">${commentFromScore(avg)}</td>
             </tr>
           `;
         }).join("")}
       </tbody>
     `;
 
-    card.appendChild(table);
-
-    /* ===============================
-       GENERAL PERFORMANCE BLOCK AT BOTTOM
-    =============================== */
+    // ===== GENERAL PERFORMANCE BLOCK =====
     const generalBlock = document.createElement("div");
-    generalBlock.style.marginTop = "14px";
+    generalBlock.style.marginTop = "10px";
     generalBlock.style.fontSize = "12px";
 
     generalBlock.innerHTML = `
-      <table style="width:100%;border-collapse:collapse;margin-top:8px;">
+      <table style="width:100%;border-collapse:collapse;margin-top:6px;">
         <tr>
           <td style="border:1px solid #000;padding:6px;width:40%;">
             <strong>Learner's General Performance Level</strong>
@@ -1174,7 +1210,6 @@ window.downloadPDF = async function () {
             ${overallAvg.toFixed(2)} — ${overallLevel(overallAvg)}
           </td>
         </tr>
-
         <tr>
           <td style="border:1px solid #000;padding:6px;">
             <strong>Teacher's General Comment</strong>
@@ -1185,48 +1220,52 @@ window.downloadPDF = async function () {
         </tr>
       </table>
 
-      <div style="margin-top:18px;">
-        <div style="display:flex;justify-content:space-between;margin-top:20px;">
-          <div>
-            Closing Date: ____________________
-          </div>
-          <div>
-            Opening Date: ____________________
-          </div>
+      <div style="margin-top:12px;">
+        <div style="display:flex;justify-content:space-between;margin-top:14px;">
+          <div>Closing Date: ____________________</div>
+          <div>Opening Date: ____________________</div>
         </div>
 
-        <div style="display:flex;justify-content:space-between;margin-top:30px;">
-          <div>
-            Class Teacher Signature: ____________________
-          </div>
-          <div>
-            Head of Institution Signature: ____________________
-          </div>
+        <div style="display:flex;justify-content:space-between;margin-top:18px;">
+          <div>Class Teacher Signature: ____________________</div>
+          <div>Head of Institution Signature: ____________________</div>
         </div>
       </div>
     `;
 
-    card.appendChild(generalBlock);
+    // ===== FORCE SECOND PAGE FOR TABLE + GENERAL BLOCK =====
+    // ===== GENERAL PERFORMANCE BLOCK + TABLE ON SECOND PAGE =====
+const secondPageContainer = document.createElement("div");
+secondPageContainer.style.pageBreakBefore = "always"; // force page 2
 
-  });
+// Increase font size and add row padding
+table.style.fontSize = "16px";
+table.querySelectorAll("td, th").forEach(cell => {
+  cell.style.padding = "10px 6px"; // taller rows
+});
 
-  /* ===============================
-     EXPORT PDF (TOP-ALIGNED)
-  =============================== */
+generalBlock.style.fontSize = "16px";
+generalBlock.style.lineHeight = "2"; // better spacing for text
+
+// Append to container
+secondPageContainer.appendChild(table);
+secondPageContainer.appendChild(generalBlock);
+
+// ===== APPEND ELEMENTS =====
+card.appendChild(summaryBlock);           // page 1
+card.appendChild(secondPageContainer);    // page 2
+ });
+  // ===== EXPORT PDF =====
   html2pdf().set({
-    margin: [10, 10, 10, 10], // TOP, RIGHT, BOTTOM, LEFT
+    margin: [10, 10, 10, 10],
     filename,
     image: { type: "jpeg", quality: 0.98 },
     html2canvas: { scale: 2, scrollY: 0, useCORS: true },
     jsPDF: { unit: "mm", format: "a4", orientation: "portrait" }
   }).from(clone).save();
 };
-  
-  
-  
+
+
 </script>
-
-
 </body>
 </html>
-
